# autoarm

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  README.md  conftest.py  hacs.json  index.html  info.md  mkdocs.yml  objects.inv  pyproject.toml  refresh-deps.sh  requirements.txt  requirements_docs.txt  requirements_test.txt  robots.txt  sitemap.xml  tags.json
.claude/: CLAUDE.md
.claude/agent-memory/ha-quality-reviewer/: MEMORY.md
.claude/agents/: docs-reviewer.md  ha-quality-reviewer.md
.devcontainer/: devcontainer.json
.github/workflows/: auto_assign_issue.yml  auto_assign_pr.yml  ci.yml  deploy.yml
automated_arming/: index.html
changelog/: index.html
configuration/create_calendar/: index.html
configuration/create_panel/: index.html
configuration/examples/minimal/: index.html
configuration/examples/typical/: index.html
configuration/migration/: index.html
configuration/removal/: index.html
custom_components/autoarm/: __init__.py  autoarming.py  calendar.py  calendar_events.py  config_flow.py  const.py  diagnostics.py  hass_api.py  helpers.py  manifest.json  notifier.py  quality_scale.yaml  strings.json
developer/coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_4fd8d8e0184c4ce6___init___py.html  z_4fd8d8e0184c4ce6_autoarming_py.html  z_4fd8d8e0184c4ce6_calendar_events_py.html  z_4fd8d8e0184c4ce6_calendar_py.html  z_4fd8d8e0184c4ce6_config_flow_py.html  z_4fd8d8e0184c4ce6_const_py.html  z_4fd8d8e0184c4ce6_diagnostics_py.html  z_4fd8d8e0184c4ce6_hass_api_py.html  z_4fd8d8e0184c4ce6_helpers_py.html  z_4fd8d8e0184c4ce6_notifier_py.html
developer/primary_classes/: index.html
developer/quality_scale_audit/: index.html
docs/: automated_arming.md  changelog.md  index.md  known_limitations.md  mobile_actions.md  removal.md  troubleshooting.md
docs/configuration/: create_calendar.md  create_panel.md  migration.md
docs/configuration/examples/: minimal.md  (+1 more)
docs/developer/: primary_classes.md  quality_scale_audit.md
examples/: legacy.yaml  minimal.yaml  mqtt.yaml_disable  typical.yaml
known_limitations/: index.html
mobile_actions/: index.html
search/: search_index.json
tests/autoarm/: test_autoarm.py  test_calendar.py  test_calendar_integration.py  test_conditions.py  test_config_flow.py  test_diagnostics.py  test_example_configs.py  test_hass_api.py  test_helpers.py  test_integration.py  test_limiter.py  test_notifier.py  test_translations.py
troubleshooting/: index.html
(+6 files in other folders)
